# workshop-rag

./: .gitignore  LLM_TIME_SERIES_SOLUTION.ipynb  README.md  pyproject.toml  rag_workshop.ipynb  time_series_tool_calling.ipynb
archive_swisstext_2024/: rag_workshop_final.ipynb  rag_workshop_step3.ipynb
to_share/: rag_workshop_step1.ipynb  rag_workshop_step2.ipynb
